# 1b-row-vaex

./: .gitignore  README.md  pyproject.toml
src/: using_vaex.py
tests/: testes.py  using_vaex.py
